Advancement on GUI

--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="background_life">
+	<div class="background">
 		<div class="background_hunger">
 		
 		</div>
 		<div class="background_shield">
-			<div id="shield_bar">
-				<div></div>
+			<div id="shield_bar" style="--width: 92">
 			</div>
-			<div id="shield_bar_2">
-				<div></div>
+			<div id="shield_bar_2" style="--width: 85">
 			</div>
 		</div>
-		<div id="life_bar">
-			<div></div>
-		</div>
-		<div id="life_bar_2">
-			<div></div>
+		<div class="background_life">
+			<div id="life_bar" style="--width: 96">
+			</div>
+			<div id="life_bar_2" style="--width: 89">
+			</div>
+			<div id="back_life_bar">
+			</div>
 		</div>
 	</div>
 </body>
