update 0.1 (hud health ui)

--- a/hud/index.html
+++ b/hud/index.html
@@ -10,10 +10,17 @@
 		<div class="background_hunger">
 		
 		</div>
+		<div class="background_money">
+			<div id="money">
+				<h2>666<span>$</span></h2>
+			</div>
+		</div>
 		<div class="background_shield">
 			<div id="shield_bar" style="--width: 92">
 			</div>
 			<div id="shield_bar_2" style="--width: 85">
+			</div>
+			<div id="back_shield_bar">
 			</div>
 		</div>
 		<div class="background_life">
@@ -22,6 +29,9 @@
 			<div id="life_bar_2" style="--width: 89">
 			</div>
 			<div id="back_life_bar">
+			</div>
+			<div id="hp">
+				<h2>100<span></span></h2>
 			</div>
 		</div>
 	</div>
