--- a/phone/index.html
+++ b/phone/index.html
@@ -8,8 +8,24 @@
   	<script type="text/javascript" src="app.js"> </script>
 	<script type="text/javascript">
 		$(document).ready(function(){
+			$('.app_homescreen').toggleClass('active');
+
 			$('#ic_message').click(function(){
-				$('.chatbox').toggleClass('active');
+				$('.app_homescreen').toggleClass('active');
+				$('.app_message').toggleClass('active');
+			})
+
+
+			let timeout_lock;
+			$('.screen').hover(function(e) {
+				$('.screen_unlock').addClass('active')
+				clearTimeout(timeout_lock)
+			})
+
+			$('.screen').mouseleave(() => {
+				timeout_lock = setTimeout(() => {
+					$('.screen_unlock').removeClass('active')
+				}, 15000);	
 			})
 		})
 	</script>
@@ -40,27 +56,33 @@
 					<div class="app_message">
 						<div class="chatbox">
 							<div class="chatlogs">
-								<div class="chat">
+								<div class="chat friend">
 									<div class="user_photo"></div>
 									<p class="chat_message">Wsh ca va ?</p>
 								</div>
-								<div class="chat">
+								<div class="chat user">
 									<div class="user_photo"></div>
 									<p class="chat_message">Tranquille</p>
+								</div>
+								<div class="chat friend">
+									<div class="user_photo"></div>
+									<p class="chat_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 								</div>
 							</div>
 							<div class="chat_form">
 								<textarea></textarea>
-								<button>Send</button>
+								<button><div id='triangle'></div></button>
 							</div>
 						</div>
-						<img id="ic_message" src="app_message.png"></img>
 					</div>
-					<img id="app_call" src="app_call.png"></img>
-					<img id="app_contact" src="app_contact.png"></img>
-					<img id="app_internet" src="app_internet.png"></img>
-					<img id="app_bank" src="app_bank.png"></img>
-					<img id="app_setting" src="app_setting.png"></img>
+						<div class="app_homescreen">
+						<img id="ic_message" src="app_message.png"></img>
+						<img id="app_call" src="app_call.png"></img>
+						<img id="app_contact" src="app_contact.png"></img>
+						<img id="app_internet" src="app_internet.png"></img>
+						<img id="app_bank" src="app_bank.png"></img>
+						<img id="app_setting" src="app_setting.png"></img>
+					</div>
 				</div>
 			</div>
 		</div>
